--- a/index.html
+++ b/index.html
@@ -149,15 +149,16 @@
     }
 
     #rollInput,
-    #department-input {
+    #department-input,
+    #department-select {
       padding: 12px 15px;
-      padding-right: 50px;
+      /* padding-right: 50px; */
       font-size: 16px;
       width: 100%;
       box-sizing: border-box;
       border: 1px solid #007bff;
       /* Blue border */
-      border-radius: 8px;
+      border-radius: 12px;
       background-color: #0d0d0d;
       /* Darker input background */
       color: #e0e0e0;
