--- a/index.html
+++ b/index.html
@@ -310,7 +310,10 @@
 <body>
   <div id="app-container">
     <div id="search-card" class="card">
-      <h2 id="dashboard-title">Internship Schedule</h2>
+      <div class="main-header">
+        <h1>GOVERNMENT GENERAL HOSPITAL <br> AND MEDICAL COLLEGE, <br> MAHABUBNAGAR, T.S. PIN: 509001.</h1>
+        <p class="schedule-title">INTERNSHIP SCHEDULE <br> [ 21 APR 2025 - 20 APR 2026 ]</p>
+      </div>
       <div class="mode-toggle">
         <span>Student</span>
         <label class="switch">
