--- a/index.html
+++ b/index.html
@@ -311,8 +311,10 @@
   <div id="app-container">
     <div id="search-card" class="card">
       <div class="main-header">
-        <h1>GOVERNMENT GENERAL HOSPITAL <br> AND MEDICAL COLLEGE, <br> MAHABUBNAGAR, T.S. PIN: 509001.</h1>
-        <p class="schedule-title">INTERNSHIP SCHEDULE <br> [ 21 APR 2025 - 20 APR 2026 ]</p>
+        <h1>GOVERNMENT GENERAL HOSPITAL <br> AND MEDICAL COLLEGE, <br> <span class="small-text">MAHABUBNAGAR, T.S. PIN:
+            509001.</span></h1>
+        <p class="schedule-title">INTERNSHIP SCHEDULE <br> <span class="small-text">[ 21 APR 2025 - 20 APR 2026 ]</span>
+        </p>
       </div>
       <div class="mode-toggle">
         <span>Student</span>
