--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
       border: 1px solid #333;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
       padding: 20px;
-      margin-bottom: 20px;
-      /* Add space between cards */
     }
 
     .main-header {
@@ -107,7 +105,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: #ccc;
+      background-color: #007bff; /* Always blue to indicate mode switch */
       transition: .4s;
       border-radius: 28px;
     }
@@ -148,10 +146,6 @@
       display: flex;
       gap: 10px;
       flex-direction: column;
-    }
-
-    input:checked+.slider {
-      background-color: #007bff;
     }
 
     input:checked+.slider:before {
@@ -280,7 +274,6 @@
 
     .report-issue-card {
       text-align: center;
-      margin-top: 20px;
     }
 
     .issue-button {
@@ -307,7 +300,7 @@
     .disclaimer {
       font-size: 11px;
       color: #888;
-      margin-top: 8px;
+      margin-top: 15px;
       text-align: center;
     }
 
@@ -316,7 +309,7 @@
       color: #888;
       /* Adjusted for dark theme */
       text-align: center;
-      margin-top: 15px;
+      margin-top: 10px;
       font-weight: 500;
     }
   </style>
@@ -359,30 +352,36 @@
     </div>
 
     <div id="student-results-container">
-      <div class="card">
+      <div class="card result-card">
         <h3><span id="result-department"></span></h3>
         <p><strong>Posting Site:</strong> <span id="result-site"></span></p>
         <p><strong>Today's Focus:</strong> <span id="result-task"></span></p>
       </div>
-      <div class="card">
+      <div class="card result-card">
         <h4>Colleagues in this Posting</h4>
         <p id="result-colleagues">No other colleagues found.</p>
       </div>
-      <div class="card">
+      <div class="card result-card">
         <h4>Guideline of the Day</h4>
         <strong id="guideline-title"></strong>
         <p id="guideline-text"></p>
       </div>
-      <div class="report-issue-card">
-        <a href="https://github.com/Devaprasad-reddy/T2P/issues/new" target="_blank" rel="noopener noreferrer"
-          class="issue-button">
-          Something not right? Report an issue
-        </a>
-      </div>
     </div>
 
-    <div id="faculty-results-container" class="card">
+    <div id="faculty-results-container" class="card result-card">
     </div>
+
+    <div class="card report-issue-card">
+      <a href="https://github.com/Devaprasad-reddy/T2P/issues/new" target="_blank" rel="noopener noreferrer"
+        class="issue-button">
+        Something not right? Report an issue
+      </a>
+      <p class="disclaimer">
+        This site is in its early build stage and might contain errors. Please verify information independently before reporting.
+      </p>
+      <p class="copyright">© 2025. All Rights Reserved.</p>
+    </div>
+
   </div>
 
   <script>
@@ -403,7 +402,6 @@
       const studentInput = document.getElementById("student-input-container");
       const facultyInput = document.getElementById("faculty-input-container");
       const departmentSelect = document.getElementById("department-select");
-      const titleElement = document.getElementById("dashboard-title");
 
       function updateDateDisplay(date) {
         const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
@@ -461,14 +459,6 @@
         currentMode = modeToggle.checked ? 'faculty' : 'student';
         studentInput.style.display = (currentMode === 'student') ? 'block' : 'none';
         facultyInput.style.display = (currentMode === 'faculty') ? 'block' : 'none';
-
-        if (titleElement) {
-          if (currentMode === 'student') {
-            titleElement.innerHTML = 'INTERNSHIP SCHEDULE <br> <span class="small-text">[ 21 APR 2025 - 20 APR 2026 ]</span>';
-          } else {
-            titleElement.innerHTML = 'Faculty Department View';
-          }
-        }
 
         // Clear results when switching modes
         document.getElementById('student-results-container').style.display = 'none';
