--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     .main-header h1 {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       margin: 0 0 10px;
       line-height: 1.2;
     }
@@ -60,15 +60,15 @@
 
     .main-header .schedule-title {
       font-weight: bold;
-      font-size: 1.1em;
+      font-size: 1.2rem;
     }
 
     @media (max-width: 480px) { /* Widened breakpoint for better coverage */
       .main-header h1 {
-        font-size: 1.0rem;
+        font-size: 1.2rem;
       }
-      .main-header p {
-        font-size: 0.9rem;
+      .main-header .schedule-title {
+        font-size: 1.0rem;
       }
     }
 
