Restored missing DOM elements in index.html that were referenced in main.js. The student results cards now include all required elements with proper IDs, resolving the "Cannot set properties of null" errors.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,20 @@
     </div>
 
     <div id="student-results-container">
-      <!-- Student results cards remain unchanged -->
+      <div class="card result-card">
+        <h3><span id="result-department"></span></h3>
+        <p><strong>Posting Site:</strong> <span id="result-site"></span></p>
+        <p><strong>Today's Focus:</strong> <span id="result-task"></span></p>
+      </div>
+      <div class="card result-card">
+        <h4>Colleagues in this Posting</h4>
+        <p id="result-colleagues">No other colleagues found.</p>
+      </div>
+      <div class="card result-card">
+        <h4>Guideline of the Day</h4>
+        <strong id="guideline-title"></strong>
+        <p id="guideline-text"></p>
+      </div>
     </div>
 
     <div id="faculty-results-container" class="card result-card">
