--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Internship Schedule</title>
+  <link rel="manifest" href="favicon_io/site.webmanifest" />
+  <link rel="icon" href="favicon_io/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -71,7 +75,7 @@
       <p class="disclaimer">
         This site is in its early build stage and might contain errors. Please verify information independently before reporting.
       </p>
-      <p class="copyright">© 2025. All Rights Reserved.</p>
+      <p class="copyright">©Dr_dp 2025. All Rights Reserved.</p>
     </div>
   </div>
 
