--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         Something not right? Report an issue
       </a>
       <p class="disclaimer">
-        This site is in its early build stage and might contain errors. Please verify information independently before reporting.
+        This site may contain errors — verify and report issues here.<br>
+        Please verify information independently before reporting to duties.
       </p>
-      <p class="copyright">©Dr_dp 2025. All Rights Reserved.</p>
+      <p class="copyright">©Dr_dp 2025. Version 1.0. All Rights Reserved.</p>
     </div>
   </div>
 
