added a theme-color meta tag to your index.html file.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#000000" />
   <title>Internship Schedule</title>
   <link rel="manifest" href="favicon_io/site.webmanifest" />
   <link rel="icon" href="favicon_io/favicon.ico" />
