changed Student to Intern

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p id="dashboard-title" class="schedule-title">INTERNSHIP SCHEDULE <br> <span class="small-text">[ 21 APR 2025 - 20 APR 2026 ]</span></p>
       </div>
       <div class="mode-toggle">
-        <span>Student</span>
+        <span>Intern</span>
         <label class="switch">
           <input type="checkbox" id="mode-toggle-switch">
           <span class="slider"></span>
