feat(faculty): Split department & site lookups, add local storage, bump to v1.1
- Separated Faculty view into two dropdowns: **Department** and **Unified Site** for clearer UX.
- Added new `<select>` for sites (ICU, OT, etc.), visible only in Faculty mode.
- JS: Added `populateSiteDatalist()`, updated event handlers to clear conflicting inputs.
- CSS: Improved spacing with robust `margin-bottom`.
- Implemented localStorage to remember last-used inputs and mode.
- Version updated from **1.0 → 1.1**.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <select id="department-select" disabled>
             <option value="">Select a department...</option>
           </select>
+          <select id="site-select" disabled>
+            <option value="">Select a Site...</option>
+          </select>
         </div>
       </div>
       <p id="result-status"></p>
@@ -80,7 +83,7 @@
         This site may contain errors — verify and report issues here.<br>
         Please verify information independently before reporting to duties.
       </p>
-      <p class="copyright">©Dr_dp 2025. Version 1.0. All Rights Reserved.</p>
+      <p class="copyright">©Dr_dp 2025. Version 1.1. All Rights Reserved.</p>
     </div>
   </div>
 
