FULL SCHEDULE link embedded

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
     </div>
 
     <div class="card report-issue-card">
+      <a href="https://docs.google.com/spreadsheets/d/1ZieRF7JE97GgNjVMtKSsOXWcUVvyQOjf/edit?usp=sharing&ouid=116512367941844366243&rtpof=true&sd=true" target="_blank" rel="noopener noreferrer"
+        class="issue-button" style="margin-bottom: 10px;">
+        click here to view complete schedule
+      </a>
       <a href="https://github.com/gmcm-ts/T2P/issues/new" target="_blank" rel="noopener noreferrer"
         class="issue-button">
         Something not right? Report an issue
