1. Added "OR" divider in Faculty mode.
2. Fixed missing ","'s for C, D groups

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <select id="department-select" disabled>
             <option value="">Select a department...</option>
           </select>
+          <div class="or-divider">OR</div>
           <select id="site-select" disabled>
             <option value="">Select a Site...</option>
           </select>
