Add Vue 3.5.26 migration with improved UI/UX (excluding node_modules)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="icon" href="favicon_io/favicon.ico" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png" />
-  <link rel="android-chrome-192x192 sizes="192x192" href="android-chrome-192x192.png" />
-  <link rel="android-chrome-512x512 sizes="512x512" href="android-chrome-512x512.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="android-chrome-512x512.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png" />
   <link rel="stylesheet" href="css/styles.css">
 </head>
