--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#007bff">
   <title>T2P - Internship Schedule</title>
-  <link rel="manifest" href="/favicon_io/site.webmanifest">
-  <link rel="icon" href="/favicon_io/favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+  <link rel="icon" href="/favicon.ico">
 </head>
 <body>
   <div id="app"></div>
